source/parser/GenesysParser.output
Não terminais inúteis na gramática

    illegal


Terminais sem uso na gramática

    fVAL
    fEVAL
    fLENG
    ILLEGAL
    fRESUTIL
    fENTATRANK
    fNUMGR
    fATRGR


Regras inúteis na gramática

  111 illegal: ILLEGAL


Estado 0 conflitos: 1 de deslocamento/redução
Estado 5 conflitos: 52 de deslocamento/redução
Estado 32 conflitos: 52 de deslocamento/redução
Estado 51 conflitos: 1 de deslocamento/redução
Estado 52 conflitos: 52 de deslocamento/redução
Estado 76 conflitos: 3 de deslocamento/redução
Estado 77 conflitos: 1 de deslocamento/redução
Estado 78 conflitos: 1 de deslocamento/redução
Estado 79 conflitos: 1 de deslocamento/redução
Estado 80 conflitos: 1 de deslocamento/redução
Estado 81 conflitos: 1 de deslocamento/redução
Estado 82 conflitos: 1 de deslocamento/redução
Estado 83 conflitos: 1 de deslocamento/redução
Estado 84 conflitos: 1 de deslocamento/redução
Estado 85 conflitos: 1 de deslocamento/redução
Estado 86 conflitos: 1 de deslocamento/redução
Estado 87 conflitos: 1 de deslocamento/redução
Estado 88 conflitos: 1 de deslocamento/redução
Estado 89 conflitos: 1 de deslocamento/redução
Estado 90 conflitos: 1 de deslocamento/redução
Estado 91 conflitos: 1 de deslocamento/redução
Estado 92 conflitos: 1 de deslocamento/redução
Estado 93 conflitos: 1 de deslocamento/redução
Estado 94 conflitos: 1 de deslocamento/redução
Estado 95 conflitos: 1 de deslocamento/redução
Estado 96 conflitos: 1 de deslocamento/redução
Estado 97 conflitos: 66 de deslocamento/redução
Estado 102 conflitos: 1 de deslocamento/redução
Estado 103 conflitos: 52 de deslocamento/redução
Estado 118 conflitos: 1 de deslocamento/redução
Estado 119 conflitos: 52 de deslocamento/redução
Estado 120 conflitos: 1 de deslocamento/redução
Estado 122 conflitos: 3 de deslocamento/redução
Estado 123 conflitos: 1 de deslocamento/redução
Estado 125 conflitos: 52 de deslocamento/redução
Estado 126 conflitos: 52 de deslocamento/redução
Estado 127 conflitos: 52 de deslocamento/redução
Estado 128 conflitos: 52 de deslocamento/redução
Estado 129 conflitos: 52 de deslocamento/redução
Estado 130 conflitos: 52 de deslocamento/redução
Estado 131 conflitos: 52 de deslocamento/redução
Estado 132 conflitos: 52 de deslocamento/redução
Estado 133 conflitos: 52 de deslocamento/redução
Estado 134 conflitos: 52 de deslocamento/redução
Estado 135 conflitos: 52 de deslocamento/redução
Estado 136 conflitos: 52 de deslocamento/redução
Estado 137 conflitos: 52 de deslocamento/redução
Estado 138 conflitos: 52 de deslocamento/redução
Estado 139 conflitos: 52 de deslocamento/redução
Estado 161 conflitos: 52 de deslocamento/redução
Estado 162 conflitos: 16 de deslocamento/redução
Estado 163 conflitos: 1 de deslocamento/redução
Estado 164 conflitos: 1 de deslocamento/redução
Estado 165 conflitos: 1 de deslocamento/redução
Estado 166 conflitos: 1 de deslocamento/redução
Estado 168 conflitos: 15 de deslocamento/redução
Estado 184 conflitos: 15 de deslocamento/redução
Estado 188 conflitos: 3 de deslocamento/redução
Estado 189 conflitos: 3 de deslocamento/redução
Estado 190 conflitos: 3 de deslocamento/redução
Estado 191 conflitos: 3 de deslocamento/redução
Estado 192 conflitos: 3 de deslocamento/redução
Estado 193 conflitos: 3 de deslocamento/redução
Estado 194 conflitos: 15 de deslocamento/redução
Estado 195 conflitos: 15 de deslocamento/redução
Estado 196 conflitos: 3 de deslocamento/redução
Estado 197 conflitos: 3 de deslocamento/redução
Estado 198 conflitos: 3 de deslocamento/redução
Estado 199 conflitos: 15 de deslocamento/redução
Estado 200 conflitos: 3 de deslocamento/redução
Estado 201 conflitos: 3 de deslocamento/redução
Estado 202 conflitos: 3 de deslocamento/redução
Estado 206 conflitos: 1 de deslocamento/redução
Estado 214 conflitos: 1 de deslocamento/redução
Estado 215 conflitos: 1 de deslocamento/redução
Estado 216 conflitos: 1 de deslocamento/redução
Estado 217 conflitos: 1 de deslocamento/redução
Estado 218 conflitos: 1 de deslocamento/redução
Estado 219 conflitos: 1 de deslocamento/redução
Estado 220 conflitos: 1 de deslocamento/redução
Estado 221 conflitos: 1 de deslocamento/redução
Estado 222 conflitos: 1 de deslocamento/redução
Estado 224 conflitos: 1 de deslocamento/redução
Estado 225 conflitos: 3 de deslocamento/redução, 71 de redução/redução
Estado 226 conflitos: 52 de deslocamento/redução
Estado 232 conflitos: 1 de deslocamento/redução
Estado 248 conflitos: 1 de deslocamento/redução
Estado 250 conflitos: 1 de deslocamento/redução
Estado 263 conflitos: 3 de deslocamento/redução
Estado 265 conflitos: 1 de deslocamento/redução
Estado 267 conflitos: 1 de deslocamento/redução
Estado 268 conflitos: 1 de deslocamento/redução
Estado 269 conflitos: 1 de deslocamento/redução
Estado 270 conflitos: 52 de deslocamento/redução
Estado 274 conflitos: 52 de deslocamento/redução
Estado 284 conflitos: 1 de deslocamento/redução
Estado 285 conflitos: 1 de deslocamento/redução
Estado 286 conflitos: 1 de deslocamento/redução
Estado 291 conflitos: 15 de deslocamento/redução
Estado 293 conflitos: 1 de deslocamento/redução
Estado 296 conflitos: 15 de deslocamento/redução
Estado 298 conflitos: 1 de deslocamento/redução
Estado 300 conflitos: 1 de deslocamento/redução
Estado 305 conflitos: 1 de deslocamento/redução
Estado 307 conflitos: 1 de deslocamento/redução
Estado 310 conflitos: 52 de deslocamento/redução
Estado 313 conflitos: 52 de deslocamento/redução
Estado 317 conflitos: 1 de deslocamento/redução
Estado 324 conflitos: 15 de deslocamento/redução
Estado 327 conflitos: 15 de deslocamento/redução
Estado 333 conflitos: 1 de deslocamento/redução
Estado 334 conflitos: 1 de deslocamento/redução
Estado 335 conflitos: 52 de deslocamento/redução
Estado 336 conflitos: 52 de deslocamento/redução
Estado 340 conflitos: 15 de deslocamento/redução
Estado 341 conflitos: 15 de deslocamento/redução
Estado 343 conflitos: 1 de deslocamento/redução
Estado 345 conflitos: 1 de deslocamento/redução
Estado 349 conflitos: 1 de deslocamento/redução
Estado 351 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: input "end of file"

    1 input: expression
    2      | error '\n'

    3 expression: number
    4           | function
    5           | command
    6           | assigment
    7           | arithmetic
    8           | logical
    9           | relacional
   10           | "(" expression ")"
   11           | attribute
   12           | variable
   13           | formula

   14 number: NUMD
   15       | NUMH

   16 arithmetic: expression "+" expression
   17           | expression "-" expression
   18           | expression "/" expression
   19           | expression "*" expression
   20           | expression "^" expression
   21           | "-" expression

   22 logical: expression oAND expression
   23        | expression oOR expression
   24        | expression oNAND expression
   25        | expression oXOR expression
   26        | oNOT expression

   27 relacional: expression "<" expression
   28           | expression ">" expression
   29           | expression oLE expression
   30           | expression oGE expression
   31           | expression oEQ expression
   32           | expression oNE expression

   33 command: commandIF
   34        | commandFOR

   35 commandIF: cIF expression expression cELSE expression
   36          | cIF expression expression

   37 commandFOR: cFOR variable "=" expression cTO expression cDO assigment
   38           | cFOR attribute "=" expression cTO expression cDO assigment

   39 function: mathFunction
   40         | trigonFunction
   41         | probFunction
   42         | kernelFunction
   43         | elementFunction
   44         | pluginFunction
   45         | userFunction

   46 kernelFunction: fTNOW
   47               | fTFIN
   48               | fMAXREP
   49               | fNUMREP
   50               | fIDENT

   51 elementFunction: ε
   52                | fTAVG "(" CSTAT ")"
   53                | fCOUNT "(" COUNTER ")"

   54 trigonFunction: fSIN "(" expression ")"
   55               | fCOS "(" expression ")"

   56 mathFunction: fROUND "(" expression ")"
   57             | fFRAC "(" expression ")"
   58             | fTRUNC "(" expression ")"
   59             | fEXP "(" expression ")"
   60             | fSQRT "(" expression ")"
   61             | fLOG "(" expression ")"
   62             | fLN "(" expression ")"
   63             | fMOD "(" expression "," expression ")"

   64 probFunction: fRND1
   65             | fEXPO "(" expression ")"
   66             | fNORM "(" expression "," expression ")"
   67             | fUNIF "(" expression "," expression ")"
   68             | fWEIB "(" expression "," expression ")"
   69             | fLOGN "(" expression "," expression ")"
   70             | fGAMM "(" expression "," expression ")"
   71             | fERLA "(" expression "," expression ")"
   72             | fTRIA "(" expression "," expression "," expression ")"
   73             | fBETA "(" expression "," expression "," expression "," expression ")"
   74             | fDISC "(" listaparm ")"

   75 userFunction: "USER" "(" expression ")"

   76 listaparm: listaparm "," expression "," expression
   77          | expression "," expression

   78 attribute: ATRIB
   79          | ATRIB "[" expression "]"
   80          | ATRIB "[" expression "," expression "]"
   81          | ATRIB "[" expression "," expression "," expression "]"

   82 variable: VARI
   83         | VARI "[" expression "]"
   84         | VARI "[" expression "," expression "]"
   85         | VARI "[" expression "," expression "," expression "]"

   86 formula: FORM
   87        | FORM "[" expression "]"
   88        | FORM "[" expression "," expression "]"
   89        | FORM "[" expression "," expression "," expression "]"

   90 assigment: ATRIB "=" expression
   91          | ATRIB "[" expression "]" "=" expression
   92          | ATRIB "[" expression "," expression "]" "=" expression
   93          | ATRIB "[" expression "," expression "," expression "]" "=" expression
   94          | VARI "=" expression
   95          | VARI "[" expression "]" "=" expression
   96          | VARI "[" expression "," expression "]" "=" expression
   97          | VARI "[" expression "," expression "," expression "]" "=" expression

   98 pluginFunction: CTEZERO
   99               | fNQ "(" QUEUE ")"
  100               | fLASTINQ "(" QUEUE ")"
  101               | fFIRSTINQ "(" QUEUE ")"
  102               | fSAQUE "(" QUEUE "," ATRIB ")"
  103               | fAQUE "(" QUEUE "," NUMD "," ATRIB ")"
  104               | fMR "(" RESOURCE ")"
  105               | fNR "(" RESOURCE ")"
  106               | fRESSEIZES "(" RESOURCE ")"
  107               | fSTATE "(" RESOURCE ")"
  108               | fIRF "(" RESOURCE ")"
  109               | fSETSUM "(" SET ")"
  110               | fNUMSET "(" SET ")"


Terminais, com as regras onde eles aparecem

    "end of file" (0) 0
    '\n' (10) 2
    error (256) 2
    NUMD <obj_t> (258) 14 103
    NUMH <obj_t> (259) 15
    CTEZERO <obj_t> (260) 98
    oLE <obj_t> (261) 29
    oGE <obj_t> (262) 30
    oEQ <obj_t> (263) 31
    oNE <obj_t> (264) 32
    oAND <obj_t> (265) 22
    oOR <obj_t> (266) 23
    oNAND <obj_t> (267) 24
    oXOR <obj_t> (268) 25
    oNOT <obj_t> (269) 26
    fSIN <obj_t> (270) 54
    fCOS <obj_t> (271) 55
    fROUND <obj_t> (272) 56
    fMOD <obj_t> (273) 63
    fTRUNC <obj_t> (274) 58
    fFRAC <obj_t> (275) 57
    fEXP <obj_t> (276) 59
    fSQRT <obj_t> (277) 60
    fLOG <obj_t> (278) 61
    fLN <obj_t> (279) 62
    fVAL <obj_t> (280)
    fEVAL <obj_t> (281)
    fLENG <obj_t> (282)
    fRND1 <obj_t> (283) 64
    fEXPO <obj_t> (284) 65
    fNORM <obj_t> (285) 66
    fUNIF <obj_t> (286) 67
    fWEIB <obj_t> (287) 68
    fLOGN <obj_t> (288) 69
    fGAMM <obj_t> (289) 70
    fERLA <obj_t> (290) 71
    fTRIA <obj_t> (291) 72
    fBETA <obj_t> (292) 73
    fDISC <obj_t> (293) 74
    fTNOW <obj_t> (294) 46
    fTFIN <obj_t> (295) 47
    fMAXREP <obj_t> (296) 48
    fNUMREP <obj_t> (297) 49
    fIDENT <obj_t> (298) 50
    cIF <obj_t> (299) 35 36
    cELSE <obj_t> (300) 35
    cFOR <obj_t> (301) 37 38
    cTO <obj_t> (302) 37 38
    cDO <obj_t> (303) 37 38
    ATRIB <obj_t> (304) 78 79 80 81 90 91 92 93 102 103
    CSTAT <obj_t> (305) 52
    COUNTER <obj_t> (306) 53
    fTAVG <obj_t> (307) 52
    fCOUNT <obj_t> (308) 53
    ILLEGAL <obj_t> (309)
    RESOURCE <obj_t> (310) 104 105 106 107 108
    fNR <obj_t> (311) 105
    fMR <obj_t> (312) 104
    fIRF <obj_t> (313) 108
    fRESSEIZES <obj_t> (314) 106
    fSTATE <obj_t> (315) 107
    fSETSUM <obj_t> (316) 109
    fRESUTIL <obj_t> (317)
    QUEUE <obj_t> (318) 99 100 101 102 103
    fNQ <obj_t> (319) 99
    fFIRSTINQ <obj_t> (320) 101
    fLASTINQ <obj_t> (321) 100
    fSAQUE <obj_t> (322) 102
    fAQUE <obj_t> (323) 103
    fENTATRANK <obj_t> (324)
    SET <obj_t> (325) 109 110
    fNUMSET <obj_t> (326) 110
    VARI <obj_t> (327) 82 83 84 85 94 95 96 97
    FORM <obj_t> (328) 86 87 88 89
    fNUMGR <obj_t> (329)
    fATRGR <obj_t> (330)
    "(" (331) 10 52 53 54 55 56 57 58 59 60 61 62 63 65 66 67 68 69 70 71 72 73 74 75 99 100 101 102 103 104 105 106 107 108 109 110
    ")" (332) 10 52 53 54 55 56 57 58 59 60 61 62 63 65 66 67 68 69 70 71 72 73 74 75 99 100 101 102 103 104 105 106 107 108 109 110
    "[" (333) 79 80 81 83 84 85 87 88 89 91 92 93 95 96 97
    "]" (334) 79 80 81 83 84 85 87 88 89 91 92 93 95 96 97
    "+" (335) 16
    "-" (336) 17 21
    "*" (337) 19
    "^" (338) 20
    "/" (339) 18
    "<" (340) 27
    ">" (341) 28
    "=" (342) 37 38 90 91 92 93 94 95 96 97
    "," (343) 63 66 67 68 69 70 71 72 73 76 77 80 81 84 85 88 89 92 93 96 97 102 103
    NEG (344)
    "USER" (345) 75


Não terminais com as regras onde eles aparecem

    $accept (92)
        à esquerda: 0
    input <obj_t> (93)
        à esquerda: 1 2
        à direita: 0
    expression <obj_t> (94)
        à esquerda: 3 4 5 6 7 8 9 10 11 12 13
        à direita: 1 10 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 35 36 37 38 54 55 56 57 58 59 60 61 62 63 65 66 67 68 69 70 71 72 73 75 76 77 79 80 81 83 84 85 87 88 89 90 91 92 93 94 95 96 97
    number <obj_t> (95)
        à esquerda: 14 15
        à direita: 3
    arithmetic <obj_t> (96)
        à esquerda: 16 17 18 19 20 21
        à direita: 7
    logical <obj_t> (97)
        à esquerda: 22 23 24 25 26
        à direita: 8
    relacional <obj_t> (98)
        à esquerda: 27 28 29 30 31 32
        à direita: 9
    command <obj_t> (99)
        à esquerda: 33 34
        à direita: 5
    commandIF <obj_t> (100)
        à esquerda: 35 36
        à direita: 33
    commandFOR <obj_t> (101)
        à esquerda: 37 38
        à direita: 34
    function <obj_t> (102)
        à esquerda: 39 40 41 42 43 44 45
        à direita: 4
    kernelFunction <obj_t> (103)
        à esquerda: 46 47 48 49 50
        à direita: 42
    elementFunction <obj_t> (104)
        à esquerda: 51 52 53
        à direita: 43
    trigonFunction <obj_t> (105)
        à esquerda: 54 55
        à direita: 40
    mathFunction <obj_t> (106)
        à esquerda: 56 57 58 59 60 61 62 63
        à direita: 39
    probFunction <obj_t> (107)
        à esquerda: 64 65 66 67 68 69 70 71 72 73 74
        à direita: 41
    userFunction <obj_t> (108)
        à esquerda: 75
        à direita: 45
    listaparm <obj_t> (109)
        à esquerda: 76 77
        à direita: 74 76
    attribute <obj_t> (110)
        à esquerda: 78 79 80 81
        à direita: 11 38
    variable <obj_t> (111)
        à esquerda: 82 83 84 85
        à direita: 12 37
    formula <obj_t> (112)
        à esquerda: 86 87 88 89
        à direita: 13
    assigment <obj_t> (113)
        à esquerda: 90 91 92 93 94 95 96 97
        à direita: 6 37 38
    pluginFunction <obj_t> (114)
        à esquerda: 98 99 100 101 102 103 104 105 106 107 108 109 110
        à direita: 44


Estado 0

    0 $accept: • input "end of file"

    error       deslocar, e ir ao estado 1
    NUMD        deslocar, e ir ao estado 2
    NUMH        deslocar, e ir ao estado 3
    CTEZERO     deslocar, e ir ao estado 4
    oNOT        deslocar, e ir ao estado 5
    fSIN        deslocar, e ir ao estado 6
    fCOS        deslocar, e ir ao estado 7
    fROUND      deslocar, e ir ao estado 8
    fMOD        deslocar, e ir ao estado 9
    fTRUNC      deslocar, e ir ao estado 10
    fFRAC       deslocar, e ir ao estado 11
    fEXP        deslocar, e ir ao estado 12
    fSQRT       deslocar, e ir ao estado 13
    fLOG        deslocar, e ir ao estado 14
    fLN         deslocar, e ir ao estado 15
    fRND1       deslocar, e ir ao estado 16
    fEXPO       deslocar, e ir ao estado 17
    fNORM       deslocar, e ir ao estado 18
    fUNIF       deslocar, e ir ao estado 19
    fWEIB       deslocar, e ir ao estado 20
    fLOGN       deslocar, e ir ao estado 21
    fGAMM       deslocar, e ir ao estado 22
    fERLA       deslocar, e ir ao estado 23
    fTRIA       deslocar, e ir ao estado 24
    fBETA       deslocar, e ir ao estado 25
    fDISC       deslocar, e ir ao estado 26
    fTNOW       deslocar, e ir ao estado 27
    fTFIN       deslocar, e ir ao estado 28
    fMAXREP     deslocar, e ir ao estado 29
    fNUMREP     deslocar, e ir ao estado 30
    fIDENT      deslocar, e ir ao estado 31
    cIF         deslocar, e ir ao estado 32
    cFOR        deslocar, e ir ao estado 33
    ATRIB       deslocar, e ir ao estado 34
    fTAVG       deslocar, e ir ao estado 35
    fCOUNT      deslocar, e ir ao estado 36
    fNR         deslocar, e ir ao estado 37
    fMR         deslocar, e ir ao estado 38
    fIRF        deslocar, e ir ao estado 39
    fRESSEIZES  deslocar, e ir ao estado 40
    fSTATE      deslocar, e ir ao estado 41
    fSETSUM     deslocar, e ir ao estado 42
    fNQ         deslocar, e ir ao estado 43
    fFIRSTINQ   deslocar, e ir ao estado 44
    fLASTINQ    deslocar, e ir ao estado 45
    fSAQUE      deslocar, e ir ao estado 46
    fAQUE       deslocar, e ir ao estado 47
    fNUMSET     deslocar, e ir ao estado 48
    VARI        deslocar, e ir ao estado 49
    FORM        deslocar, e ir ao estado 50
    "("         deslocar, e ir ao estado 51
    "-"         deslocar, e ir ao estado 52
    "USER"      deslocar, e ir ao estado 53

    "end of file"  reduzir usando a regra 51 (elementFunction)
    oLE            reduzir usando a regra 51 (elementFunction)
    oGE            reduzir usando a regra 51 (elementFunction)
    oEQ            reduzir usando a regra 51 (elementFunction)
    oNE            reduzir usando a regra 51 (elementFunction)
    oAND           reduzir usando a regra 51 (elementFunction)
    oOR            reduzir usando a regra 51 (elementFunction)
    oNAND          reduzir usando a regra 51 (elementFunction)
    oXOR           reduzir usando a regra 51 (elementFunction)
    "+"            reduzir usando a regra 51 (elementFunction)
    "-"            [reduzir usando a regra 51 (elementFunction)]
    "*"            reduzir usando a regra 51 (elementFunction)
    "^"            reduzir usando a regra 51 (elementFunction)
    "/"            reduzir usando a regra 51 (elementFunction)
    "<"            reduzir usando a regra 51 (elementFunction)
    ">"            reduzir usando a regra 51 (elementFunction)

    input            ir ao estado 54
    expression       ir ao estado 55
    number           ir ao estado 56
    arithmetic       ir ao estado 57
    logical          ir ao estado 58
    relacional       ir ao estado 59
    command          ir ao estado 60
    commandIF        ir ao estado 61
    commandFOR       ir ao estado 62
    function         ir ao estado 63
    kernelFunction   ir ao estado 64
    elementFunction  ir ao estado 65
    trigonFunction   ir ao estado 66
    mathFunction     ir ao estado 67
    probFunction     ir ao estado 68
    userFunction     ir ao estado 69
    attribute        ir ao estado 70
    variable         ir ao estado 71
    formula          ir ao estado 72
    assigment        ir ao estado 73
    pluginFunction   ir ao estado 74


Estado 1

    2 input: error • '\n'

    '\n'  deslocar, e ir ao estado 75


Estado 2

   14 number: NUMD •

    $padrão  reduzir usando a regra 14 (number)


Estado 3

   15 number: NUMH •

    $padrão  reduzir usando a regra 15 (number)


Estado 4

   98 pluginFunction: CTEZERO •

    $padrão  reduzir usando a regra 98 (pluginFunction)


Estado 5

   26 logical: oNOT • expression

    NUMD        deslocar, e ir ao estado 2
    NUMH        deslocar, e ir ao estado 3
    CTEZERO     deslocar, e ir ao estado 4
    oNOT        deslocar, e ir ao estado 5
    fSIN        deslocar, e ir ao estado 6
    fCOS        deslocar, e ir ao estado 7
    fROUND      deslocar, e ir ao estado 8
    fMOD        deslocar, e ir ao estado 9
    fTRUNC      deslocar, e ir ao estado 10
    fFRAC       deslocar, e ir ao estado 11
    fEXP        deslocar, e ir ao estado 12
    fSQRT       deslocar, e ir ao estado 13
    fLOG        deslocar, e ir ao estado 14
    fLN         deslocar, e ir ao estado 15
    fRND1       deslocar, e ir ao estado 16
    fEXPO       deslocar, e ir ao estado 17
    fNORM       deslocar, e ir ao estado 18
    fUNIF       deslocar, e ir ao estado 19
    fWEIB       deslocar, e ir ao estado 20
    fLOGN       deslocar, e ir ao estado 21
    fGAMM       deslocar, e ir ao estado 22
    fERLA       deslocar, e ir ao estado 23
    fTRIA       deslocar, e ir ao estado 24
    fBETA       deslocar, e ir ao estado 25
    fDISC       deslocar, e ir ao estado 26
    fTNOW       deslocar, e ir ao estado 27
    fTFIN       deslocar, e ir ao estado 28
    fMAXREP     deslocar, e ir ao estado 29
    fNUMREP     deslocar, e ir ao estado 30
    fIDENT      deslocar, e ir ao estado 31
    cIF         deslocar, e ir ao estado 32
    cFOR        deslocar, e ir ao estado 33
    ATRIB       deslocar, e ir ao estado 34
    fTAVG       deslocar, e ir ao estado 35
    fCOUNT      deslocar, e ir ao estado 36
    fNR         deslocar, e ir ao estado 37
    fMR         deslocar, e ir ao estado 38
    fIRF        deslocar, e ir ao estado 39
    fRESSEIZES  deslocar, e ir ao estado 40
    fSTATE      deslocar, e ir ao estado 41
    fSETSUM     deslocar, e ir ao estado 42
    fNQ         deslocar, e ir ao estado 43
    fFIRSTINQ   deslocar, e ir ao estado 44
    fLASTINQ    deslocar, e ir ao estado 45
    fSAQUE      deslocar, e ir ao estado 46
    fAQUE       deslocar, e ir ao estado 47
    fNUMSET     deslocar, e ir ao estado 48
    VARI        deslocar, e ir ao estado 49
    FORM        deslocar, e ir ao estado 50
    "("         deslocar, e ir ao estado 51
    "-"         deslocar, e ir ao estado 52
    "USER"      deslocar, e ir ao estado 53

    NUMD        [reduzir usando a regra 51 (elementFunction)]
    NUMH        [reduzir usando a regra 51 (elementFunction)]
    CTEZERO     [reduzir usando a regra 51 (elementFunction)]
    oNOT        [reduzir usando a regra 51 (elementFunction)]
    fSIN        [reduzir usando a regra 51 (elementFunction)]
    fCOS        [reduzir usando a regra 51 (elementFunction)]
    fROUND      [reduzir usando a regra 51 (elementFunction)]
    fMOD        [reduzir usando a regra 51 (elementFunction)]
    fTRUNC      [reduzir usando a regra 51 (elementFunction)]
    fFRAC       [reduzir usando a regra 51 (elementFunction)]
    fEXP        [reduzir usando a regra 51 (elementFunction)]
    fSQRT       [reduzir usando a regra 51 (elementFunction)]
    fLOG        [reduzir usando a regra 51 (elementFunction)]
    fLN         [reduzir usando a regra 51 (elementFunction)]
    fRND1       [reduzir usando a regra 51 (elementFunction)]
    fEXPO       [reduzir usando a regra 51 (elementFunction)]
    fNORM       [reduzir usando a regra 51 (elementFunction)]
    fUNIF       [reduzir usando a regra 51 (elementFunction)]
    fWEIB       [reduzir usando a regra 51 (elementFunction)]
    fLOGN       [reduzir usando a regra 51 (elementFunction)]
    fGAMM       [reduzir usando a regra 51 (elementFunction)]
    fERLA       [reduzir usando a regra 51 (elementFunction)]
    fTRIA       [reduzir usando a regra 51 (elementFunction)]
    fBETA       [reduzir usando a regra 51 (elementFunction)]
    fDISC       [reduzir usando a regra 51 (elementFunction)]
    fTNOW       [reduzir usando a regra 51 (elementFunction)]
    fTFIN       [reduzir usando a regra 51 (elementFunction)]
    fMAXREP     [reduzir usando a regra 51 (elementFunction)]
    fNUMREP     [reduzir usando a regra 51 (elementFunction)]
    fIDENT      [reduzir usando a regra 51 (elementFunction)]
    cIF         [reduzir usando a regra 51 (elementFunction)]
    cFOR        [reduzir usando a regra 51 (elementFunction)]
    ATRIB       [reduzir usando a regra 51 (elementFunction)]
    fTAVG       [reduzir usando a regra 51 (elementFunction)]
    fCOUNT      [reduzir usando a regra 51 (elementFunction)]
    fNR         [reduzir usando a regra 51 (elementFunction)]
    fMR         [reduzir usando a regra 51 (elementFunction)]
    fIRF        [reduzir usando a regra 51 (elementFunction)]
    fRESSEIZES  [reduzir usando a regra 51 (elementFunction)]
    fSTATE      [reduzir usando a regra 51 (elementFunction)]
    fSETSUM     [reduzir usando a regra 51 (elementFunction)]
    fNQ         [reduzir usando a regra 51 (elementFunction)]
    fFIRSTINQ   [reduzir usando a regra 51 (elementFunction)]
    fLASTINQ    [reduzir usando a regra 51 (elementFunction)]
    fSAQUE      [reduzir usando a regra 51 (elementFunction)]
    fAQUE       [reduzir usando a regra 51 (elementFunction)]
    fNUMSET     [reduzir usando a regra 51 (elementFunction)]
    VARI        [reduzir usando a regra 51 (elementFunction)]
    FORM        [reduzir usando a regra 51 (elementFunction)]
    "("         [reduzir usando a regra 51 (elementFunction)]
    "-"         [reduzir usando a regra 51 (elementFunction)]
    "USER"      [reduzir usando a regra 51 (elementFunction)]
    $padrão     reduzir usando a regra 51 (elementFunction)

    expression       ir ao estado 76
    number           ir ao estado 56
    arithmetic       ir ao estado 57
    logical          ir ao estado 58
    relacional       ir ao estado 59
    command          ir ao estado 60
    commandIF        ir ao estado 61
    commandFOR       ir ao estado 62
    function         ir ao estado 63
    kernelFunction   ir ao estado 64
    elementFunction  ir ao estado 65
    trigonFunction   ir ao estado 66
    mathFunction     ir ao estado 67
    probFunction     ir ao estado 68
    userFunction     ir ao estado 69
    attribute        ir ao estado 70
    variable         ir ao estado 71
    formula          ir ao estado 72
    assigment        ir ao estado 73
    pluginFunction   ir ao estado 74


Estado 6

   54 trigonFunction: fSIN • "(" expression ")"

    "("  deslocar, e ir ao estado 77


Estado 7

   55 trigonFunction: fCOS • "(" expression ")"

    "("  deslocar, e ir ao estado 78


Estado 8

   56 mathFunction: fROUND • "(" expression ")"

    "("  deslocar, e ir ao estado 79


Estado 9

   63 mathFunction: fMOD • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 80


Estado 10

   58 mathFunction: fTRUNC • "(" expression ")"

    "("  deslocar, e ir ao estado 81


Estado 11

   57 mathFunction: fFRAC • "(" expression ")"

    "("  deslocar, e ir ao estado 82


Estado 12

   59 mathFunction: fEXP • "(" expression ")"

    "("  deslocar, e ir ao estado 83


Estado 13

   60 mathFunction: fSQRT • "(" expression ")"

    "("  deslocar, e ir ao estado 84


Estado 14

   61 mathFunction: fLOG • "(" expression ")"

    "("  deslocar, e ir ao estado 85


Estado 15

   62 mathFunction: fLN • "(" expression ")"

    "("  deslocar, e ir ao estado 86


Estado 16

   64 probFunction: fRND1 •

    $padrão  reduzir usando a regra 64 (probFunction)


Estado 17

   65 probFunction: fEXPO • "(" expression ")"

    "("  deslocar, e ir ao estado 87


Estado 18

   66 probFunction: fNORM • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 88


Estado 19

   67 probFunction: fUNIF • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 89


Estado 20

   68 probFunction: fWEIB • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 90


Estado 21

   69 probFunction: fLOGN • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 91


Estado 22

   70 probFunction: fGAMM • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 92


Estado 23

   71 probFunction: fERLA • "(" expression "," expression ")"

    "("  deslocar, e ir ao estado 93


Estado 24

   72 probFunction: fTRIA • "(" expression "," expression "," expression ")"

    "("  deslocar, e ir ao estado 94


Estado 25

   73 probFunction: fBETA • "(" expression "," expression "," expression "," expression ")"

    "("  deslocar, e ir ao estado 95


Estado 26

   74 probFunction: fDISC • "(" listaparm ")"

    "("  deslocar, e ir ao estado 96


Estado 27

   46 kernelFunction: fTNOW •

    $padrão  reduzir usando a regra 46 (kernelFunction)


Estado 28

   47 kernelFunction: fTFIN •

    $padrão  reduzir usando a regra 47 (kernelFunction)


Estado 29

   48 kernelFunction: fMAXREP •

    $padrão  reduzir usando a regra 48 (kernelFunction)


Estado 30

   49 kernelFunction: fNUMREP •

    $padrão  reduzir usando a regra 49 (kernelFunction)


Estado 31

   50 kernelFunction: fIDENT •

    $padrão  reduzir usando a regra 50 (kernelFunction)


Estado 32

   35 commandIF: cIF • expression expression cELSE expression
   36          | cIF • expression expression
